{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 56,
  "lineage": "5f31b0b0-3b7f-7b10-5de1-a16dc39f5ce1",
  "resources": [
    {
      "module": "module.staging.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:742460038063:security-group/sg-0b5f86d7d5ca81c44",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0b5f86d7d5ca81c44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b56d0ecceae8f9b8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "staging-cluster-20251117093638848000000010",
            "name_prefix": "staging-cluster-",
            "owner_id": "742460038063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-cluster"
            },
            "tags_all": {
              "Name": "staging-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3869675956d505a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:742460038063:security-group/sg-0b56d0ecceae8f9b8",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b56d0ecceae8f9b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f86d7d5ca81c44"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f86d7d5ca81c44"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f86d7d5ca81c44"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f86d7d5ca81c44"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f86d7d5ca81c44"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b5f86d7d5ca81c44"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "staging-node-20251117093638848000000011",
            "name_prefix": "staging-node-",
            "owner_id": "742460038063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staging-node",
              "kubernetes.io/cluster/staging": "owned"
            },
            "tags_all": {
              "Name": "staging-node",
              "kubernetes.io/cluster/staging": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b3869675956d505a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1349170846",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b5f86d7d5ca81c44",
            "security_group_rule_id": "sgr-00b4c7fed3067d305",
            "self": false,
            "source_security_group_id": "sg-0b56d0ecceae8f9b8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging.module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1874210215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-08922a42d694d42c6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1097613913",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-0b577d41a1291ffa6",
            "self": false,
            "source_security_group_id": "sg-0b5f86d7d5ca81c44",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2086585762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-0f9515cc692e7c2e5",
            "self": false,
            "source_security_group_id": "sg-0b5f86d7d5ca81c44",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1256414664",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-029d99ca1ed847e2f",
            "self": false,
            "source_security_group_id": "sg-0b5f86d7d5ca81c44",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1505714665",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-045a42b46ca0dc016",
            "self": false,
            "source_security_group_id": "sg-0b5f86d7d5ca81c44",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1025397282",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-058a4923257541d2f",
            "self": false,
            "source_security_group_id": "sg-0b5f86d7d5ca81c44",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-693649620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-03388e910e002f02b",
            "self": false,
            "source_security_group_id": "sg-0b5f86d7d5ca81c44",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-342474669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-0509d51e6e9237636",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-580688124",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-00516330ad8922df7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2034025709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0b56d0ecceae8f9b8",
            "security_group_rule_id": "sgr-098e03d8f2dcd4f62",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.aws_iam_role.terraform_admin_role",
            "module.staging.aws_iam_role_policy_attachment.terraform_admin_policy",
            "module.staging.data.aws_caller_identity.this",
            "module.staging.module.eks.module.eks.aws_security_group.cluster",
            "module.staging.module.eks.module.eks.aws_security_group.node",
            "module.staging.module.network.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:742460038063:subnet/subnet-05a8c0ccfbc5e4d23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a8c0ccfbc5e4d23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742460038063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-eu-west-3a",
              "kubernetes.io/cluster/staging": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-eu-west-3a",
              "kubernetes.io/cluster/staging": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b3869675956d505a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.module.network.module.vpc.aws_vpc.this",
            "module.staging.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:742460038063:subnet/subnet-0458f41fa83ea654f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0458f41fa83ea654f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742460038063",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-eu-west-3b",
              "kubernetes.io/cluster/staging": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-eu-west-3b",
              "kubernetes.io/cluster/staging": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b3869675956d505a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging.module.network.module.vpc.aws_vpc.this",
            "module.staging.module.network.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.staging.module.network.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:742460038063:vpc/vpc-0b3869675956d505a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-050007f46b5255c18",
            "default_route_table_id": "rtb-0547266ab0f778877",
            "default_security_group_id": "sg-05635657825021aa0",
            "dhcp_options_id": "dopt-00b0d2e118a786cff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b3869675956d505a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0547266ab0f778877",
            "owner_id": "742460038063",
            "tags": {
              "Name": "staging"
            },
            "tags_all": {
              "Name": "staging"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}